Ajout de couleur

--- a/templates/factures/_facture_client.html.twig
+++ b/templates/factures/_facture_client.html.twig
@@ -129,88 +129,4 @@
 	</tbody>
 </table>
 
-<div style="margin: 15px 0;">
-	<div style="width: 48%;display: inline-block;vertical-align: top;">
-		<h4 style="color: blue;">LA BANQUE POSTALE</h4>
-	</div>
-	<div style="width: 48%;display: inline-block;vertical-align: top;text-align: right">
-		<h6 style="color: blue;">RELEVÉ D’IDENTITÉ BANCAIRE/IBAN</h6>
-	</div>
-</div>
-
-<p style="padding: 1px;margin: 0;">
-	Ce relevé est destiné à être remis, sur demande de vos créanciers et débiteurs, français ou étrangers appelés à faire
-	inscrire des opérations sur votre compte (virements, prélèvements...). Nous vous rappelons que les informations
-	contenues dans votre RIB/IBAN sont de nature confidentielle, c’est pourquoi nous vous invitons à la plus grande
-	vigilance avant leur transmission.
-</p>
-<p style="padding: 1px;margin: 0;">
-	We remind you that the information contained in your RIB/IBAN is on confidential nature, and we thus strongly
-	encourage you to be vigilant as regards its transmission.
-</p>
-
-<h4 style="color: blue;">IBAN identifiant national de compte</h4>
-<P style="font-style: italic;">National Bank Account Number</P>
-<br><br>
-<table style="width: 100%;border: 2px solid black;margin: 15px 0;border-collapse: collapse;">
-	<thead>
-		<tr>
-			<th style="border-collapse: collapse;text-align: center;border: 2px solid black;">
-				<h5>ETABLISSEMENT <br><br> 20041</h5>
-			</th>
-			<th style="border-collapse: collapse;text-align: center;border: 2px solid black;">
-				<h5>GUICHET <br><br> 01012</h5>
-			</th>
-			<th style="border-collapse: collapse;text-align: center;border: 2px solid black;">
-				<h5>N°COMPTE <br><br> 5585877W033</h5>
-			</th>
-			<th style="border-collapse: collapse;text-align: center;border: 2px solid black;">
-				<h5>CLÉ RIB <br><br> 04</h5>
-			</th>
-			<th style="border-collapse: collapse;text-align: center;border: 2px solid black;">
-				<h5>DOMICILIATION <br><br> ORLEANS LA SCE CENTRE
-					FINANCIER</h5>
-			</th>
-		</tr>
-	</thead>
-</table>
-
-<p>
-	L’identifiant international de compte est intégré au présent relevé d’identité bancaire. Cet identifiant a été créé
-	pour faciliter les règlements transfrontières.
-</p>
-<br><br>
-<div>
-	<div style="width: 49%;display: inline-block;vertical-align: top;">
-		<h5 style="padding: 0;margin: 0;letter-spacing: -1px;">IBAN - Identifiant international de compte</h5>
-		<p style="padding: 0;margin: 0;font-style: italic;">International Bank Account Number</p>
-		<div style="border: 2px solid black;padding: 15px;text-align:center;">
-			<h5>FR2520041010125585877W03304</h5>
-		</div>
-	</div>
-	<div style="width: 49%;display: inline-block;vertical-align: top;">
-		<h5 style="padding: 0;margin: 0;letter-spacing: -1px;">BIC - Identifiant international de l’établissement</h5>
-		<p style="padding: 0;margin: 0;font-style: italic;">Bank Identifier Code</p>
-		<div style="border: 2px solid black;padding: 15px;text-align:center;">
-			<h5>PSSTFRPPSCE</h5>
-		</div>
-	</div>
-</div>
-
-<br><br>
-<div>
-	<h4 style="color: blue;">TITULAIRE DU COMPTE</h4>
-	<p style="padding: 0;margin: 0;font-style: italic;">Account Owner</p>
-	<hr>
-	<h3>TRANSPORTS NEVRITY</h3>
-	<p>
-		121 AVENUE VICTOR HUGO <br>
-		91550 <br>
-		PARAY VIEILLE POSTE
-	</p>
-	<br><br>
-	<small>
-		La Banque Postale -Société Anonyme à Directoire et Conseil de Surveillance au capital de 6 585 350 218 euros
-		Siège social et adresse postale :115, rue de Sèvres-75275 Paris Cedex 06-RCS Paris 421 100 645 - Code APE6419Z
-	</small>
-</div>
+{% include "factures/_pied_page.html.twig" %}
