--- a/templates/factures/_send_client_mail.html.twig
+++ b/templates/factures/_send_client_mail.html.twig
@@ -1,4 +1,10 @@
-<form method="post" class="mt-3 d-inline pt-4" action="{{ path('send_client_facture', {commandeId: facture.commande.id, factureId: facture.id, }) }}" data-turbo="false">
+<form method="post" class="mt-3 d-inline pt-4" action="{{ path('send_client_facture', {commandeId: facture.commande.id, factureId: facture.id, }) }}" data-turbo="false" 
+	{% if facture.statut == 1 %}onsubmit="return confirm('Voulez-vous envoyer de nouveau la facture?');"{% endif %}>
+
 	<input type="hidden" name="_token" value="{{ csrf_token('send_client_mail' ~ facture.commande.id) }}">
-	<button type="submit" {{ facture.statut == 1 ? 'disabled' : '' }} class="btn btn-primary stripes-btn"><i class="mdi mdi-email-outline"></i>&nbsp;Envoyer la facture</button>
+
+	<button type="submit" class="btn btn-{{ facture.statut == 1 ? 'warning' : 'primary' }} stripes-btn">
+		<i class="mdi mdi-email-outline"></i>
+		&nbsp;{{ facture.statut == 1 ? 'Envoyer de nouveau' : 'Envoyer la facture ' }}
+	</button>
 </form>
