--- a/templates/espace_utilisateur/index.html.twig
+++ b/templates/espace_utilisateur/index.html.twig
@@ -44,7 +44,13 @@
                <p class="text-muted font-size-13">{{ user.email }}</p>
                {{ include('users/_roles.html.twig') }}
                <p class="font-size-13 text-muted">{{ user.apropos|raw }}</p>
+               
                <a href="{{ path('users_profil') }}" class="btn btn-primary btn-rounded px-5">Profil</a>
+
+               <a href="https://great.o2switch.net:2096/cpsess6250207650/3rdparty/roundcube/?_task=mail&_mbox=INBOX" target="_blank" class="btn btn-outline-primary btn-rounded px-5 waves-effect waves-light my-4">
+						Accéder au webmail
+					</a>
+
             </div>
          </div>
       </div>
