Traduction page details factures

--- a/templates/factures/_pied_page.html.twig
+++ b/templates/factures/_pied_page.html.twig
@@ -73,9 +73,7 @@
 	<hr>
 	<h3>TRANSPORTS NEVRITY</h3>
 	<p>
-		121 AVENUE VICTOR HUGO <br>
-		91550 <br>
-		PARAY VIEILLE POSTE
+		{{ appAdresse }}
 	</p>
 	<br><br>
 	<small>
