--- a/templates/commande/show.html.twig
+++ b/templates/commande/show.html.twig
@@ -118,6 +118,8 @@
 				<br class="mt-3">
 
 				{{ include('factures/_form_generer.html.twig') }}
+				
+				{{ include('commande/_notification_form.html.twig') }}
 
 				{{ include('commande/_delete_form.html.twig') }}
 			</div>
